# qbus_collection

./: .gitmodules  CMakeLists.txt  README.md  configure.sh
libs/adbl/src/: CMakeLists.txt
libs/cape/src/: CMakeLists.txt
libs/qbus/: CMakeLists.txt  Dockerfile  Dockerfile_buster  docker_build.sh
libs/qbus/app/: CMakeLists.txt  qbus_app.c
libs/qbus/cli/: CMakeLists.txt  qbus_cli.c  qbus_cli_methods.c  qbus_cli_methods.h  qbus_cli_modules.c  qbus_cli_modules.h  qbus_cli_requests.c  qbus_cli_requests.h
libs/qbus/core/: CMakeLists.txt  qbus_core.h  qbus_frame.c  qbus_frame.h  qbus_route.c  qbus_route.h
libs/qbus/doc/: classes.graphml  qbus_emitters.graphml  qbus_pooling.graphml  qbus_v2.graphml  qbus_v2_flow.graphml  routing.graphml  routing_all.graphml
libs/qbus/docker/: Dockerfile_alpine  Dockerfile_bookworm  Dockerfile_bullseye  Dockerfile_buster  Dockerfile_mosquitto
libs/qbus/pvd_common/: CMakeLists.txt  qbus_frame.c  qbus_frame.h  qbus_pvd.h
libs/qbus/pvd_mqtt/: CMakeLists.txt  qbus_mqtt.c  qbus_mqtt.h
libs/qbus/src/: CMakeLists.txt  qbus.c  qbus.h  qbus.hpp  qbus_agent.c  qbus_agent.h  qbus_con.c  qbus_con.h  qbus_config.c  qbus_config.h  qbus_engines.c  qbus_engines.h  qbus_logger_file.h  qbus_message.c  qbus_message.h  qbus_method.c  qbus_method.h  qbus_methods.c  qbus_methods.h  qbus_route.c  qbus_route.h  qbus_router.c  qbus_router.h  qbus_storage.c  qbus_storage.h  qbus_types.h
libs/qbus/test/: CMakeLists.txt  qbus_test1_emu.c  qbus_test_emu.c
libs/qbus/tests/: CMakeLists.txt  ut_qbus_emitter.c  ut_qbus_local.c  ut_qbus_perform.c  ut_qbus_subs.c
libs/qcrypt/src/: CMakeLists.txt  qcrypt.c  qcrypt.h  qcrypt_aes.c  qcrypt_aes.h  qcrypt_decrypt.c  qcrypt_decrypt.h  qcrypt_encrypt.c  qcrypt_encrypt.h  qcrypt_file.c  qcrypt_file.h
libs/qflow/src/: CMakeLists.txt  qflow.c  qflow.h
libs/qjobs/src/: CMakeLists.txt  qjobs.c  qjobs.h
libs/qjobs/tests/: CMakeLists.txt  ut_qjobs.c
libs/qtee/src/: CMakeLists.txt  qtee_eval.c  qtee_eval.h  qtee_format.c  qtee_format.h  qtee_gen.c  qtee_gen.h  qtee_template.c  qtee_template.h
libs/qtee/tests/: CMakeLists.txt  qtee_ut_eval.c  qtee_ut_eval.cpp  qtee_ut_template.c
libs/qwave/src/: CMakeLists.txt  http_parser.c  qwave.c  qwave.h  qwave_aioctx.c  qwave_aioctx.h  qwave_conctx.c  qwave_conctx.h  qwave_config.c  qwave_config.h
libs/qwebs/src/: CMakeLists.txt  http_parser.c  http_parser.h  qwebs.c  qwebs.h  qwebs_connection.c  qwebs_connection.h  qwebs_files.c  qwebs_files.h  qwebs_multipart.c  qwebs_multipart.h  qwebs_prot_ws.c  qwebs_prot_ws.h  qwebs_response.c  qwebs_response.h  qwebs_structs.h
modules/auth/: CMakeLists.txt  Dockerfile  auth.c  auth_gp.c  auth_gp.h  auth_rinfo.c  auth_rinfo.h  auth_ui.c  auth_ui.h  auth_vault.c  auth_vault.h
modules/auth/docker/: CMakeLists.txt  CMakeLists_debug.txt  CMakeLists_min.txt  Dockerfile_bookworm  Dockerfile_bullseye  Dockerfile_buster  Dockerfile_debug  Dockerfile_min
modules/auth/ng/: auth.service.spec.ts  auth.service.ts  modal_login.html
modules/auth/ng_admin/: auth_admin.module.ts  auth_routing.module.ts
modules/auth/ng_common/: auth_common.module.ts
modules/auth/ng_connector/: conn_module.ts  conn_service.ts
modules/auth/ng_guard/: auth_guard.module.ts
modules/auth/ng_service/: auth.service.ts  auth_service.module.ts  component_content.html  component_login.html  component_service.html  modal_info.html  modal_login.html  modal_logout.html  modal_workspaces.html
modules/auth/ng_session/: auth_session.module.ts  auth_session.ts  component.ts  component_content.html  component_lang.html  component_login.html  component_menu.html  component_msgs.html  component_passcheck.html  component_passreset.html  modal_2factor.html  modal_firstuse.html  modal_info.html  modal_login.html
modules/auth/ng_users/: auth_users.module.ts
modules/auth/scripts/: dump_roles.sh  dump_tables.sh  vault_set.sh
modules/auth/src/: CMakeLists.txt  auth.c  auth_gp.c  auth_gp.h  auth_msgs.c  auth_msgs.h  auth_perm.c  auth_perm.h  auth_rinfo.c  auth_rinfo.h  auth_roles.c  auth_roles.h  auth_session.c  auth_session.h  auth_tokens.c  auth_tokens.h  auth_ui.c  auth_ui.h  auth_vault.c  auth_vault.h  run.sh
modules/flow/: CMakeLists.txt  Dockerfile  flow.c  flow_chain.c  flow_chain.h  flow_process.c  flow_process.h  flow_run.c  flow_run.h  flow_run_dbw.c  flow_run_dbw.h  flow_run_step.c  flow_run_step.h  flow_workflow.c  flow_workflow.h  flow_workstep.c  flow_workstep.h
modules/flow/doc/: ng_workstep.graphml
modules/flow/docker/: CMakeLists.txt  CMakeLists_min.txt  Dockerfile  Dockerfile_bullseye  Dockerfile_buster  Dockerfile_jessie  Dockerfile_min
modules/flow/ng/: flow-routing.module.ts  flow.module.ts
modules/flow/ng_admin/: flow_admin.module.ts
modules/flow/ng_common/: flow_common.module.ts
modules/flow/ng_editor/: flow_editor.module.ts
modules/flow/ng_logs/: flow_logs.module.ts
modules/flow/scripts/: dump_tables.sh
modules/flow/src/: CMakeLists.txt  flow.c  flow_chain.c  flow_chain.h  flow_process.c  flow_process.h  flow_run.c  flow_run_dbw.c  flow_run_dbw.h  flow_run_step.c  flow_run_step.h  flow_workflow.c  flow_workflow.h  flow_workstep.c  run.sh
modules/jobs/: CMakeLists.txt  Dockerfile  jobs.c  jobs_list.c  jobs_list.h  jobs_sched.c  jobs_sched.h
modules/jobs/docker/: CMakeLists.txt  CMakeLists_min.txt  Dockerfile_buster  Dockerfile_min
modules/jobs/ng/: jobs.module.ts
modules/jobs/scripts/: dump_tables.sh
modules/jobs/src/: CMakeLists.txt  jobs.c  jobs_list.c  jobs_list.h
modules/pipe/: CMakeLists.txt
modules/pipe/cmake/: FindPcre.cmake
modules/pipe/docker/: CMakeLists.txt  Dockerfile_buster
modules/pipe/src/: CMakeLists.txt  pipe.c
modules/webs/: CMakeLists.txt  Dockerfile  DockerfileNg1  webs.c  webs_post.c
modules/webs/docker/: CMakeLists.txt  CMakeLists_min.txt  Dockerfile  Dockerfile_buster  Dockerfile_min
modules/webs/src/: CMakeLists.txt  Dockerfile  webs.c  webs_enjs.c  webs_enjs.h  webs_imca.c  webs_imca.h  webs_json.c  webs_json.h  webs_post.c  webs_post.h
tools/cldd/src/: CMakeLists.txt  cldd.c
(+437 files in other folders)
